--- a/index.html
+++ b/index.html
@@ -8,5 +8,35 @@
 </head>
 <body>
 
+  <section>
+    <h1>Dinosaurs</h1>
+    <ol class="list-group">
+      <li>
+        <i class="icon i-64">
+          <img src="images/ankylosaurus.svg" alt="wtf is that spelling thomas">
+        </i>
+        <span class="icon-label">Ankylosaurus</span>
+      </li>
+      <li>
+        <i class="icon i-64">
+          <img src="images/Hadrosaur.svg" alt="wtf is that spelling thomas">
+        </i>
+        <span class="icon-label">Hadrosaur</span>
+      </li>
+      <li>
+        <i class="icon i-64">
+          <img src="images/stegosaurus.svg" alt="wtf is that spelling thomas">
+        </i>
+        <span class="icon-label">Stegosaurus</span>
+      </li>
+      <li>
+        <i class="icon i-64">
+          <img src="images/triceratops.svg" alt="wtf is that spelling thomas">
+        </i>
+        <span class="icon-label">Triceratops</span>
+      </li>
+    </ol>
+  </section>
+
 </body>
 </html>
